@@ -8,16 +8,10 @@ skill=store
 ########################################################
 # Videos
 ########################################################
-item_infos=<div class="mediaThumb">[^<]+<a href="([^"]+)amp;(m=\d+)"[^<]+><img src="([^"]+)" alt="([^"]+)"[^>]+></a>
-item_order=url|url.append|icon|title
+item_infos=<a href="([^"]+)" class="[^"]+">.+?<img  id="[^"]+" src="(http[^"]+jpg)" alt="([^"]+)"
+item_order=url|icon|title
 item_info_name=url.append
 item_info_build=%s
-item_info_name=type
-item_info_build=video
-item_url_build=http://www.pornotube.com/%s
-########################################################
-item_infos=<div class="mediaThumb">[^<]+<a href="(media.php[?]m=\d+)"[^<]+><img src="([^"]+)" alt="([^"]+)"[^>]+></a>
-item_order=url|icon|title
 item_info_name=type
 item_info_build=video
 item_url_build=http://www.pornotube.com/%s
@@ -35,7 +29,7 @@ item_url_build=http://www.pornotube.com/%s
 ########################################################
 # Next
 ########################################################
-item_infos=<li class="currentPage"><a href="\?[^q][^=][^"]+">\d+</li><li><a href="(\?[^q][^=][^"]+)">\d+</a></li>
+item_infos=<a href="([?]type[^"]+page=\d+)">next[^"]+</a>
 item_order=url
 item_skill=space|lock
 item_info_name=title
@@ -44,7 +38,7 @@ item_info_name=icon
 item_info_build=video.devil.image|next.png
 item_url_build=http://www.pornotube.com/media.php%s
 ########################################################
-item_infos=<li class="currentPage"><a href="\?[q][=][^"]+">\d+</li><li><a href="(\?[q][=][^"]+)">\d+</a></li>
+item_infos=<a href="([?]q=[^"]+page=\d+)">next[^"]+</a>
 item_order=url
 item_skill=space|lock
 item_info_name=title
